@@ -1,3 +1,5 @@
+2005/9/20 -- released version 20050920_trunk
+
 2005/9/19 -- released version 20050919_trunk
 
 2005/9/18 -- released version 20050918_trunk
